--- a/TecnoFusion3/Inicio/templates/inicio.html
+++ b/TecnoFusion3/Inicio/templates/inicio.html
@@ -38,13 +38,13 @@
             <h3>¿Donde encontrarnos?</h3>
             <p>¿Deseas buscar un lugar dónde adquirir los equipos en físico? Tecnofusion cuenta con sedes en diversas partes del país, con gusto te indicaremos los puntos más cercanos.</p>
             <p></p>
-            <button>IR</button>
+            <button>  <a href="https://maps.app.goo.gl/hzQfAUC9WnFf48Gi9">IR </a> </button>
         </div>
         <div class="card">
             <h3>¿App movil?</h3>
             <p>¿Estás más cómodo en una plataforma móvil? Tecnofusion también piensa en ti. Contamos con una app móvil en desarrollo que tendrá como objetivo mostrarte las características de la tienda de hardware.</p>
             <p></p>
-            <button>IR</button>
+            <button><a href="https://drive.google.com/file/d/1irXn10poZd4x5srcMd8-yDIyH24zoJOK/view?usp=sharing">IR</a> </button>
         </div>
     </section>
     <!--fin de targetas o cards-->
